syntax = "proto3";

package littlehorse;

import "common_wfspec.proto";
import "object_id.proto";
import "google/protobuf/timestamp.proto";

option go_package = ".;lhproto";
option java_multiple_files = true;
option java_package = "io.littlehorse.sdk.common.proto";
option csharp_namespace = "LittleHorse.Sdk.Common.Proto";

// A `StructDef` is a versioned metadata object (tenant-scoped) inside LittleHorse
// that defines the structure and content of a variable value. It allows strong typing.
message StructDef {
  // The id of the `Schema`. This includes the version.
  StructDefId id = 1;

  // Optionally description of the schema.
  optional string description = 2;

  // When the StructDef was created.
  google.protobuf.Timestamp created_at = 3;

  // The `StructDef` defines the actual structure of any `Struct` using this `InlineStructDeff`.
  InlineStructDef struct_def = 4;
}
